--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "nodemon": "^3.0.2",
     "sequelize": "^6.35.2",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
