--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.1",
     "@types/uuid": "^9.0.8",
+    "@types/validator": "^13.11.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
