--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "module-alias": "^2.2.3",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
@@ -29,5 +30,8 @@
     "@types/validator": "^13.11.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "_moduleAliases":{
+    "@": "src"
   }
 }
