--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -31,7 +32,7 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
-  "_moduleAliases":{
+  "_moduleAliases": {
     "@": "src"
   }
 }
